--- a/static/stylesheets/pokedex.css
+++ b/static/stylesheets/pokedex.css
@@ -1,41 +1,21 @@
 /*GLOBAL*/
 body {
-	background: white;
+	
 }
 
 /*INDEX*/
-.pokemon-sprite-small{
+/*.pokemon-sprite-small{
 	width: 150px;
-}
+}*/
 
-h1 {
-	text-align: center;
-}
-
-li {
-	text-align: center;
-	display: inline-block;
-}
-
-.pokemon-wrapper {
+/*.pokemon-wrapper {
 	padding: 30px;
 	margin: 30px;
 	text-align: center;
 	display: inline-block;
-}
-
-nav {
-	text-align: left;
-	position: fixed;
-	padding: 10px;
-	background: lightblue;
-}
-
-ul {
-	margin-left: 60px;
-}
+}*/
 
 /*DETAIL PAGE*/
-.pokemon-sprite {
+/*.pokemon-sprite {
 	float: left;
-}
+}*/
