--- a/templates/base.html
+++ b/templates/base.html
@@ -30,15 +30,19 @@
 	</header>
 
 	<main>
-		{% block body %}
-		{% endblock %}
+    <div class="container">
+  		{% block body %}
+  		{% endblock %}
+    </div>
 	</main>
 
 	<br>
 
 	<footer>
-		<hr>
-		<p>Hi <a href="http://ratiksharma.com/">Ratik</a>, thank you for your help on this.</p>
+    <div class="container">
+    	<hr>
+    	<p>Hi <a href="http://ratiksharma.com/">Ratik</a>, thank you for your help on this.</p>
+    </div>
 	</footer>
 
 	<!-- Placed at the end of the document so the pages load faster -->
