--- a/static/stylesheets/pokedex.css
+++ b/static/stylesheets/pokedex.css
@@ -14,6 +14,17 @@ body {
 .pokemon-wrapper {
 	height: 300px;
   width: 100%;
+  border: 2px solid rgba(0,0,0,0.4);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition: border 0.2s ease-in-out;
+}
+
+.pokemon-wrapper:hover {
+  border: 2px solid rgba(0,0,0,0.8);
 }
 
 .pokemon-wrapper .pokemon-image {
