--- a/static/stylesheets/pokedex.css
+++ b/static/stylesheets/pokedex.css
@@ -1,5 +1,18 @@
 /*GLOBAL*/
 body {
+  font-family: sans-serif;
+  font-size: 1em;
+}
+
+a {
+  color: rgba(0,0,0,1);
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+a:hover {
+  text-decoration: none;
+  color: rgba(0,0,0,0.6);
 }
 
 /* INDEX */
@@ -20,11 +33,6 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transition: border 0.2s ease-in-out;
-}
-
-.pokemon-wrapper:hover {
-  border: 2px solid rgba(0,0,0,0.8);
 }
 
 .pokemon-wrapper .pokemon-image {
