--- a/pokedex/templates/pokedex/detail.html
+++ b/pokedex/templates/pokedex/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<div class="container">
 	<img src="{{ pokemon.img }}" class="pokemon-sprite">
 
 	{{ pokemon.name }}
@@ -14,5 +15,5 @@
 	{{ pokemon.height }}
 	<br>
 	{{ pokemon.weight }}
-
+</div>
 {% endblock %}
