--- a/pokedex/templates/pokedex/index.html
+++ b/pokedex/templates/pokedex/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load pokedex_extras %}
 
+{% block title %}
+  <title>Pokedex</title>
+{% endblock %}
+
 {% block aside %}
 
   <aside class="internal-nav">  
