--- a/pokedex/templates/pokedex/detail.html
+++ b/pokedex/templates/pokedex/detail.html
@@ -1,19 +1,29 @@
 {% extends 'base.html' %}
 
-{% block body %}
-<div class="container">
-	<img src="{{ pokemon.img }}" class="pokemon-sprite">
+{% block title %}
 
-	{{ pokemon.name }}
-	<br>
-	{{ pokemon.dex }}
-	<br>
-	{{ pokemon.types }}
-	<br>
-	{{ pokemon.species }}
-	<br>
-	{{ pokemon.height }}
-	<br>
-	{{ pokemon.weight }}
-</div>
+  <title>{{ pokemon.name }}</title>
+
+{% endblock %}
+
+{% block body %}
+  <h1 class="splash-page"> {{ pokemon.name }} </h1>
+  <br>
+  <div  class="pokemon-sprite-detail">
+    <img src="{{ pokemon.img }}" height="450" width="450">
+  </div>
+  <article class="pokemon-details">
+    
+     Name: <strong>{{ pokemon.name }}</strong>
+      <br>
+     National Dex Number: <strong>#{{ pokemon.dex }}</strong>
+      <br>
+     Type: <strong>{{ pokemon.types }}</strong>
+      <br>
+     Species: <strong>{{ pokemon.species }}</strong>
+      <br>
+     Height: <strong>{{ pokemon.height }}</strong>
+      <br>
+     Weight: <strong>{{ pokemon.weight }}</strong>
+  </article>
 {% endblock %}
