--- a/pokedex/templates/pokedex/detail.html
+++ b/pokedex/templates/pokedex/detail.html
@@ -1,35 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %}
-
-  <title>{{ pokemon.name }}</title>
-
-{% endblock %}
-
 {% block body %}
-  <h1 class="splash-page"> {{ pokemon.name }} </h1>
-  
-  <br>
-  
-  <div  class="pokemon-sprite-detail">
-    <img src="{{ pokemon.img }}" height="450" width="450">
-  </div>
+	<img src="{{ pokemon.img }}" class="pokemon-sprite">
 
-  <article class="pokemon-details">
-    
-     Name: <strong>{{ pokemon.name }}</strong>
-      <br>
-     National Dex Number: <strong>#{{ pokemon.dex }}</strong>
-      <br>
-     Type: <strong>{{ pokemon.types }}</strong>
-      <br>
-     Species: <strong>{{ pokemon.species }}</strong>
-      <br>
-     Height: <strong>{{ pokemon.height }}</strong>
-      <br>
-     Weight: <strong>{{ pokemon.weight }}</strong>
-      <br>
-     Type Defenses: <strong>TBA</strong>
-  
-  </article>
+	{{ pokemon.name }}
+	<br>
+	{{ pokemon.dex }}
+	<br>
+	{{ pokemon.types }}
+	<br>
+	{{ pokemon.species }}
+	<br>
+	{{ pokemon.height }}
+	<br>
+	{{ pokemon.weight }}
+
 {% endblock %}
