--- a/static/stylesheets/pokedex.css
+++ b/static/stylesheets/pokedex.css
@@ -57,21 +57,28 @@ a:hover {
   padding: 10px;
 }
 
-.pokemon-sprite-detail {
-  float: right;
-  border: 2px solid rgba(0,0,0,0.6);
-  border-radius: 500px;
-  background-color: #eee;
-  max-height: 450px;
-  max-width: 450px;
+/*DETAIL*/
 
+.pokemon-sprite-detail {
+  /*max-height: 450px;
+  max-width: 100%;*/
 }
 
 .splash-page {
-  text-align: center;
-  font-size: 100px;
+/*  text-align: center;
+  font-size: 100px;*/
 }
 
 .pokemon-details {
-  margin-top: 125px;
+ /* margin-top: 125px;*/
+}
+
+.detail-img {
+
+}
+
+.detail-info {
+  margin-bottom: 10px;
+  font-size: 24px;
+  margin-top: 20px;
 }
