--- a/pokedex/templates/pokedex/detail.html
+++ b/pokedex/templates/pokedex/detail.html
@@ -9,11 +9,11 @@
 {% block body %}
   <div class="row">
     <div class="col-md-12">
-      <p class="display-2 text-center"> {{ pokemon.name }} </p>
+      <p class="h1 text-center"> {{ pokemon.name }} </p>
     </div>
   </div>  
   <div class="row">
-    <div class="pokemon-details col-md-4">
+    <div class="col-md-4">
       <p class="detail-info">Name: <strong>{{ pokemon.name }}</strong></p>
       <p class="detail-info">National Dex Number: <strong>#{{ pokemon.dex }}</strong></p>
       <p class="detail-info">Type: <strong>{{ pokemon.types }}</strong></p>
