--- a/pokedex/templates/pokedex/index.html
+++ b/pokedex/templates/pokedex/index.html
@@ -7,11 +7,10 @@
 
 {% block aside %}
 
-  <aside class="internal-nav">  
-    <a href="#1">Generation 1</a>
-    <br>
-    <a href="#152">Generation 2</a>
-  </aside>
+  <ul>  
+    <li><a href="#1">G1</a></li>
+    <li><a href="#152">G2</a></li>
+  </ul>
 
 {% endblock %}
 
