Add type defenses generation to detail page
Created a helper file to store function to generate type defenses

Co-Authored-By: Ratik Sharma <ratik96@gmail.com>

--- a/pokedex/templates/pokedex/detail.html
+++ b/pokedex/templates/pokedex/detail.html
@@ -20,7 +20,7 @@
       <p class="detail-info">Species: <strong>{{ pokemon.species }}</strong></p>
       <p class="detail-info">Height: <strong>{{ pokemon.height }}</strong></p>
       <p class="detail-info">Weight: <strong>{{ pokemon.weight }}</strong>
-      <p class="detail-info">Type Defenses: <strong>TBA</strong></p>
+      <p class="detail-info">Type Defenses: <strong>{{ defenses }}</strong></p>
     </div>
 
     <div class="col-md-4 order-sm-4 order-1">
