Clean defenses data
Co-Authored-By: Ratik Sharma <ratik96@gmail.com>

--- a/pokedex/templates/pokedex/detail.html
+++ b/pokedex/templates/pokedex/detail.html
@@ -29,8 +29,9 @@
   </div>
   <div class='row'>
     <p class="detail-info">Type Defenses:</p>
-    <div class="table-responsive-sm">
-      <table class="table">
+  </div>  
+    <div class="table-responsive">
+      <table class="table table-bordered">
         <tbody>
           {% for key, value in defenses.items %}          
             <tr>
