Add slug field to moves and implemetn detail page
Co-Authored-By: Ratik Sharma <ratik96@gmail.com>

--- a/moves/templates/moves/index.html
+++ b/moves/templates/moves/index.html
@@ -21,7 +21,9 @@
       <tbody>
         {% for move in moves %}
           <tr>
-            <th scope="row">{{ move.name }}</th>
+            <th scope="row">
+              <a href="{% url 'detail' move.slug %}">{{ move.name }}</a>
+            </th>
             <td>{{ move.category }}</td>
             <td>{{ move.power }}</td>
             <td>{{ move.accuracy }}</td>
