--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,10 @@
       <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'index' %}">Pokedex <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'pokedex:index' %}">Pokedex <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Movesets</a>
+            <a class="nav-link" href="{% url 'moves:index' %}">Moves</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Evolutions</a>
