Edit move page title
Co-Authored-By: Ratik Sharma <ratik96@gmail.com>

--- a/moves/templates/moves/index.html
+++ b/moves/templates/moves/index.html
@@ -2,7 +2,7 @@
 {% load pokedex_extras %}
 
 {% block title %}
-  <title>Move List</title>
+  <title>Move</title>
 {% endblock %}
 
 {% block body %}
